--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
-  "name": "api-rest-ts",
-  "version": "1.0.0",
-  "description": "api rest using nodejs with typescript",
-  "main": "index.js",
-  "author": "jvcdev",
-  "license": "MIT",
-  "dependencies": {},
-  "devDependencies": {
-    "@types/express": "^4.17.14",
-    "@typescript-eslint/eslint-plugin": "^5.46.0",
-    "@typescript-eslint/parser": "^5.46.0",
-    "eslint": "^8.29.0",
-    "express": "^4.18.2",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^4.9.4"
-  }
+    "name": "api-rest-ts",
+    "version": "1.0.0",
+    "description": "api rest using nodejs with typescript",
+    "main": "index.js",
+    "author": "jvcdev",
+    "license": "MIT",
+    "scripts": {
+        "start": "ts-node-dev ./src/index.ts"
+    },
+    "dependencies": {
+        "dotenv": "^16.0.3"
+    },
+    "devDependencies": {
+        "@types/express": "^4.17.14",
+        "@typescript-eslint/eslint-plugin": "^5.46.0",
+        "@typescript-eslint/parser": "^5.46.0",
+        "eslint": "^8.29.0",
+        "express": "^4.18.2",
+        "ts-node-dev": "^2.0.0",
+        "typescript": "^4.9.4"
+    }
 }
