--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@typescript-eslint/parser": "^5.46.0",
         "eslint": "^8.29.0",
         "express": "^4.18.2",
+        "nodemon": "^2.0.20",
         "ts-node-dev": "^2.0.0",
         "typescript": "^4.9.4"
     }
