--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "start": "ts-node-dev ./src/index.ts"
     },
     "dependencies": {
-        "dotenv": "^16.0.3"
+        "dotenv": "^16.0.3",
+        "yup": "^0.32.11"
     },
     "devDependencies": {
         "@types/express": "^4.17.14",
